# PotatoParser

./: .gitignore  .readthedocs.yml  MANIFEST  MANIFEST.in  PParser.py  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  release.yml
docs/: about.rst  commands.rst  conf.py  index.rst  options.rst  quickstart.rst  requirements.txt
docs/_static/: theme_overrides.css
pparser/: __init__.py  art.py  commands.py  core.py  exceptions.py  main.py  parser.py  payloads.py  pparser.py  show.py  sketch.py  utils.py
pparser/alphabets/: ascii.json  russian.json
tests/: in.txt  out.txt  runtest.py
